fix grid gap in index cards and sample only 4 campaigns in home

--- a/app/assets/stylesheets/campaigns/_index.scss
+++ b/app/assets/stylesheets/campaigns/_index.scss
@@ -28,7 +28,7 @@
 #cause_container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 10px;
+  grid-gap: 16px;
   width: 80vw;
   margin: auto;
 }
